--- a/src/assets/templates/story/story-a.html
+++ b/src/assets/templates/story/story-a.html
@@ -6,7 +6,7 @@
     functions: {
       createSpoilers: true,
       createProfileBox: true,      
-      createPageTabs: [
+      createTabs: [
         {
           contentArea: "spoiler",
           tabs: [
