day 4; revamped modal and created editor class

--- a/src/assets/templates/.eternal/css/_profilebox.scss
+++ b/src/assets/templates/.eternal/css/_profilebox.scss
@@ -4,6 +4,8 @@
   padding: 0.5em;
   margin-left: 1em;
   border-radius: 0.5em;
+  // display: grid;
+  // place-items: center;
   table {
     font-size: smaller;
     color: #2e2e2e;
@@ -71,3 +73,4 @@
     background-color: none;
   }
 }
+
