--- a/src/assets/templates/story/story-a.html
+++ b/src/assets/templates/story/story-a.html
@@ -17,7 +17,7 @@
       ]
     },
     fileStructure: {
-      nonSpoiler: {
+      nonspoiler: {
         "non-spoiler-overview": "default"
       },
       spoiler: {
@@ -140,10 +140,8 @@
 <!-- File Content -->
 
 <div id="non-spoiler">
-
   <div id="non-spoiler-overview" class="page-tab">
-
-    Morales is the Main Protagonist of the novel "The Birth of a Hero" and the **the central** point of the story. He is a student studying in U.H.A. and is part of E-Class. He has the power to create physical objects using his body fats which he apparently "Awakened" randomly in the past.
+    Ethan Morales is the Main Protagonist of the novel "The Birth of a Hero" and the **the central** point of the story. He is a student studying in U.H.A. and is part of E-Class. He has the power to create physical objects using his body fats which he apparently "Awakened" randomly in the past.
     
     [[toc]]
 
@@ -175,14 +173,9 @@
     ## Fire Resistance
     Ability to resist intense heat. Inherited from his mother.
   </div>
-
 </div>
-
-
 <div id="spoiler">
-
   <div id="spoiler-overview" class="page-tab">
-
     Ethan Morales is the Main Protagonist of the novel "The Birth of a Hero" and the the central point of the story. He is a student studying in U.H.A. and is part of E-Class.
 
     He and his family are Desterian Immigrants who migrated to Arlika in order to seek a better life. The first six years of his life was spent in Desteria, witnessing the cruelty of drug cartels and the ghetto, caused a life-long influenced on Ethan's psyche that even he didn't knew he had.
@@ -238,9 +231,7 @@
     # Gallery
 
   </div>
-
   <div id="spoiler-relationships" class="page-tab">
     # Relationships
   </div>
-
 </div>
