--- a/src/assets/templates/.eternal/css/_editor.scss
+++ b/src/assets/templates/.eternal/css/_editor.scss
@@ -1,116 +1,119 @@
+@mixin innerBorder($size, $color) {
+  -webkit-box-shadow: inset 0px 0px 0px $size $color;
+  -moz-box-shadow: inset 0px 0px 0px $size $color;
+  box-shadow: inset 0px 0px 0px $size $color;
+}
+
+// Modal 
+.disable-srolling {
+  margin-right: 0.35em;
+  height: 100%;
+  overflow: hidden;
+}
+
+.modal-visible {
+  display: block !important;
+  opacity: 1 !important;
+  transition: all 0.35s ease-in;
+  visibility: visible !important;
+}
+
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s linear;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+
+  .modal-card {
+    background-color: $Card;
+    margin: 5em auto;
+    width: 45%;
+    height: fit-content;
+    border-radius: 0.5em;
+    // padding: 1em;
   }
-  
-  /* Modal Content */
   .modal-content {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
+    border: none !important;
+    border-radius: 0em !important;
+    padding: 1em !important;
+  }
+  .modal-bar {
+    width: 100%;
+    border: none !important;
+  }
+  .modal-header {
+    padding: 0em !important;
+    padding: 1em !important;
+    border-bottom: 1px solid $BG !important;
+    h1 {
+      margin: 0em !important;
+    }
+  }
+}
+
+.editor-table {
+  border: 1px solid $BG;
+  border-left: none !important;
+  width: 100%;
+  border-radius: 1em !important;
+  button {
+    width: 100%;
+    margin: 0em 0em 0.2em 0em !important;
+  }
+  .input-title {
+    text-align: left;
+    padding: 0.5em 1em;
+    background-color: $Color1;
+    color: $FontColor2;
+    width: 20%;
+    font-weight: 400;
+  }
+  .input-box {
     width: 80%;
+    padding: 0em;
   }
-  
-  /* The Close Button */
-  .close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+  input {
+    padding-left: 1em;
+    width: 100%;
+    height: 100%;
+    border-radius: 0em;
+    height: inherit;
+    font-weight: 400;
+    border: none;
+    outline: none;
+    display: table;
+    padding: 0.5em 1em;
+    &:focus {
+      @include innerBorder(1px, $Color1);
+    }
   }
-  
-  .close:hover,
-  .close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
+}
+
+.button-table {
+  width: 100%;
+  display: grid;
+  place-items: center;
+  button {
+    width: 100%;
+
   }
+}
 
+#editorContentDiv {
+  margin-top: 2em;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-// .editor-content {
-
-//   textarea {
-//     display: grid;
-//     place-items: center;
-//     vertical-align: middle;
-//     width: 100%;
-//   }
-// }
-
-// #editor-content-spoiler-tab-btns {
-
-//   .tab-active {
-//     background-color: $Color1;
-//     color: $FontColor2;
-//   }
-
-//   button {
-//     // border: 1px solid $BorderColor;
-//     padding: 1em 1.5em;
-//     border-radius: 0.2em;
-//     &:hover {
-//       background-color: $Color1Dark;
-//       color: $FontColor2;
-//     } 
-//   }
-
-// }
-
-// #editorHeaderRight {
-//   button {
-//     margin-bottom: 0.15em;
-//     min-width: 10em !important;
-//     padding: 0.5em 0em !important;
-//   }
-// }
-
-// #page-content-title {
-//   max-width: 10em;
-// }
-
-// .hl-yellow {
-//   background-color: yellow;
-// }
-
-
-// .editor-toolbar {
-//   background-color: $Color1;
-// }
+  .tab-active {
+    background-color: $Color1;
+    color: $FontColor2;
+    border-radius: 0.3em !important;
+  }
+}
