--- a/src/assets/templates/.eternal/css/style.scss
+++ b/src/assets/templates/.eternal/css/style.scss
@@ -13,17 +13,18 @@ $ToolTipBG: #eb4034;
 $ToolTipColor: #ffffff;
 $BorderColor: #ced4da;
 
-// Imports    
+// Imports
 @import './navbar';
 @import './spoiler';
 @import './default';
 @import './toc';
 @import './profilebox';
 @import './editor';
-@import './simplemde';
 @import './notifications';
+@import './utility';
+@import './easymde.min';
 
-// CSS 
+// CSS
 @mixin center {
   display: grid;
   place-items: center;
@@ -35,10 +36,33 @@ $BorderColor: #ced4da;
   box-shadow: none !important;
 }
 
+@mixin innerBorder($size, $color) {
+  -webkit-box-shadow: inset 0px 0px 0px $size $color;
+  -moz-box-shadow: inset 0px 0px 0px $size $color;
+  box-shadow: inset 0px 0px 0px $size $color;
+}
+
 #page-title {
   h1 {
     font-size: 2.5em;
     font-weight: 400;
+  }
+}
+
+#head-card {
+  @include center();
+  margin: 6em 0em 3em 0em;
+  h1 {
+    color: $FontColor1;
+    text-shadow: 1px 1px 2px $FontShadow;
+  }
+  // Website Title
+  #project-title {
+    text-align: center;
+    font-size: 3.4em;
+  }
+  #nav-card {
+    text-align: center;
   }
 }
 
@@ -55,73 +79,79 @@ body {
     color: $FontColor1;
     border-radius: 0.5em;
     padding: 2em 3em;
-    margin: 0em 1em 4em 1em;
-    hr {
-      margin: 0em 0em 0.3em 0em;
+  }
+}
+
+@media (max-width: 1200px) {
+  .modal-card {
+    width: 70% !important;
+  }
+}
+
+@media (max-width: 750px) {
+  .container,
+  .container-sm {
+    max-width: 575px;
+  }
+  .modal-card {
+    width: 100% !important;
+  }
+}
+
+@media (max-width: 575px) {
+  .container,
+  .container-sm {
+    max-width: 500px;
+  }
+  .body-card {
+    padding: 2em 1.5em !important;
+  }
+  .modal-card {
+    width: 90% !important;
+  }
+}
+
+@media (max-width: 350px) {
+  .container,
+  .container-sm {
+    max-width: 300px;
+  }
+  .body-card {
+    padding: 2em 1em !important;
+  }
+  #project-title {
+    font-size: 2.5em !important;
+  }
+  .profile-box {
+    float: none !important;
+    margin: auto;
+  }
+  .profile-box-parent {
+    display: grid !important;
+    place-items: center !important;
+  }
+  #page-title {
+    h1 {
+      font-size: 2em;
     }
   }
-}
-
-#head-card {
-  @include center();
-  margin: 6em 0em 3em 0em;
-  h1 {
-    color: $FontColor1;
-    text-shadow: 1px 1px 2px $FontShadow;
+  .modal-card {
+    width: 300px !important;
   }
-  // Website Title
+}
+ 
+@media (max-width: 300px) {
+  .container,
+  .container-sm {
+    max-width: 250px;
+  }
+  .body-card {
+    padding: 0em;
+    margin: 0em;
+    width: 100% !important;
+  }
   #project-title {
-    font-size: 3.4em;
+    font-size: 2em !important;
   }
 }
 
-#nav-card {
-  background-color: transparent;
-}
-
-.hide {
-  display: none;
-}
-
-.space {
-  margin-bottom: 0.5em !important;
-}
-
-.bold {
-  font-weight: bold;
-}
-
-// Primary button used   
-.btn {
-  @include removeSelect();
-  cursor: pointer !important;
-}
-
-.btn-one {
-  font-size: 1rem;
-  background-color: $Color1;
-  color: $FontColor2;
-  border: 0em;
-  cursor: pointer !important;
-  &:hover {
-    background-color: $Color1Dark;
-    cursor: pointer !important;
-  }
-}
-
-.input-one {
-  @include removeSelect();
-  -ms-transform: scale(1);
-  -moz-transform: scale(1);
-  -webkit-transform: scale(1);
-  -o-transform: scale(1);
-  transform: scale(1);
-  padding: 10px;
-  margin: 0em;
-  margin-right: 0.2em;
-}
-
-.label-primary {
-  font-size: 1rem;
-  vertical-align: middle;
-}
