--- a/src/assets/templates/.eternal/assets/editor.html
+++ b/src/assets/templates/.eternal/assets/editor.html
@@ -6,18 +6,18 @@
     <div class="modal-bar modal-header">
       <h1>Page Editor</h1>
       <div>
-        <button class="btn btn-one">Save Changes</button>
-        <button class="btn btn-secondary" onclick="openModal('editor-modal')">Close</button>
+        <button class="btn btn-one small-font" onclick="pageEditor.saveEditor()">Save Changes</button>
+        <button class="btn btn-two small-font" onclick="openModal('editor-modal', true)">Close</button>
       </div>
     </div>
 
-    <div class="modal-content">
+    <div class="modal-content container">
 
       <div class="row">
-        <div class="col-9">
+        <div class="col-9 editor-left">
           <table class="editor-table">
             <tr>
-              <td class="input-title">Page Title</td>
+              <td class="input-title up-border-radius">Page Title</td>
               <td class="input-box"><input type="text" placeholder="Awesome page title!" id="editorPageTitle"></td>
             </tr>
             <tr>
@@ -25,31 +25,25 @@
               <td class="input-box"><input type="text" placeholder="Parent page name for breadcrumbs" id="editorParent"></td>
             </tr>
             <tr>
-              <td class="input-title">Tags</td>
+              <td class="input-title down-border-radius">Tags</td>
               <td class="input-box"><input type="text" placeholder="Tag1 Tag2 Tag3" id="editorTags"></td>
             </tr>
           </table>
         </div>
 
-        <div class="col-3">
-          <table class="button-table no-border">
-            <tr>
-              <td><button class="btn btn-one">Profile Box</button></td>
-            </tr>
-            <tr>
-              <td><button class="btn btn-one">Add Tabs</button></td>
-            </tr>
-            <tr>
-              <td>
-                <div class="form-check checkbox-spoiler float-end">
-                  <input class="form-check-input check-box" type="checkbox" value="" id="editorSpoilerCheck" onclick="pageEditor.showSpoilers()">
-                  <label class="form-check-label" for="editorSpoilerCheck">
-                      Enable Spoilers
-                    </label>
-                </div>
-              </td>
-            </tr>
-          </table>
+        <div class="col-3 editor-right">
+          <div class="btn-group-vertical" role="group" aria-label="Basic example" id="editorAreaBtns">
+            <button type="button" class="btn btn-one btn-active" onclick="pageEditor.switchEditorArea(this, 'editorContentDiv')">Edit Content</button>
+            <button type="button" class="btn btn-one" onclick="pageEditor.switchEditorArea(this, 'editorProfileBoxDiv')">Profile Box</button>
+            <button type="button" class="btn btn-one" onclick="pageEditor.switchEditorArea(this, 'editorManageTabs')">Manage Tabs</button>
+          </div>
+
+          <div class="form-check">
+            <input class="form-check-input check-box" type="checkbox" value="" id="editorSpoilerCheck" onclick="pageEditor.showSpoilers()" onchange="pageEditor.editorModified()">
+            <label class="form-check-label" for="editorSpoilerCheck">
+                Enable Spoilers
+              </label>
+          </div>
         </div>
 
       </div>
@@ -60,14 +54,84 @@
 
         <div id="editor-nonspoiler">
           <div id="editor-nonspoiler-tab-btns"></div>
-          <div class="editor-content-tab"></div>
+          <div id="editor-nonspoiler-content-tab"></div>
 
         </div>
 
         <div id="editor-spoiler">
           <div id="editor-spoiler-tab-btns"></div>
-          <div class="editor-content-tab"></div>
+          <div id="editor-spoiler-content-tab"></div>
         </div>
+      </div>
+
+
+      <div id="editorProfileBoxDiv" class="row hide">
+        <h1>Profile Box</h1>
+      </div>
+
+      <div id="editorManageTabs" class="row hide">
+        <h1>Manage Tabs</h1>
+
+        <div id="editorManageTabsLeft" class="col">
+          <select class="form-select no-select" name="Tabs" size="11" id="managetab-contentarea-list" onchange="pageEditor.tabSelectedOption(this)">
+            <optgroup class="editorTabGroup" label="Non Spoilers" id="managetab-nonspoiler-list">
+            </optgroup>
+            <optgroup class="editorTabGroup" label="Spoilers" id="managetab-spoiler-list">
+            </optgroup>
+
+          </select>
+          <div class="navButtons" role="group" aria-label="Basic example">
+            <button type="button" class="btn btn-one  mr-1" onclick="pageEditor.tabUp()">▲</button>
+            <button type="button" class="btn btn-one">▼</button>
+          </div>
+        </div>
+
+        <div id="editorManageTabsRight" class="col">
+
+
+          <div>
+            <h2>Rename</h2>
+            <div class="side-line">
+              <label for="tabNameInput" class="block-color border-radius-none-right ">Name</label>
+              <input class="input-one w-100p" type="text" name="tabName" id="tabReNameInput">
+            </div>
+
+            <div class="side-line navButtons">
+              <button type="button" class="btn btn-one" onclick="pageEditor.tabRename()">Rename</button>
+              <button type="button" class="btn btn-one mb-1" onclick="pageEditor.tabRemove()">Remove</button>
+              <button type="button" class="btn btn-one" onclick="pageEditor.tabClear('tabReNameInput')">Clear</button>
+              <button type="button" class="btn btn-one ml-1">True Delete</button>
+            </div>
+          </div>
+          <br>
+          <div>
+            <h2>New</h2>
+
+            <div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input  no-select" type="radio" name="contentAreaRadio" id="inlineRadio-nonspoiler" value="nonspoiler" checked>
+                <label class="form-check-label" for="inlineRadio1">Non-Spoiler</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input no-select" type="radio" name="contentAreaRadio" id="inlineRadio-spoiler" value="spoiler">
+                <label class="form-check-label" for="inlineRadio2">Spoiler</label>
+              </div>
+            </div>
+
+            
+            <div class="side-line">
+              <label for="tabNameInput" class="block-color border-radius-none-right ">Name</label>
+              <input class="input-one w-100p" type="text" name="tabName" id="tabNewNameInput">
+            </div>
+  
+            <div class="side-line navButtons">
+              <button type="button" class="btn btn-one mr-1" onclick="pageEditor.tabAdd()">Add</button>
+              <button type="button" class="btn btn-one" onclick="pageEditor.tabClear('tabNewNameInput')">Clear</button>
+            </div>
+
+          </div>
+        </div>
+
       </div>
 
     </div>
