--- a/src/assets/templates/.eternal/css/_default.scss
+++ b/src/assets/templates/.eternal/css/_default.scss
@@ -2,7 +2,7 @@ html {
   font-family: $fontFamily;
 }
 
-body {
+body, .modal {
   font-family: $fontFamily;
   scrollbar-width: 1em;
   scrollbar-color: $Color1 $Card;
@@ -18,6 +18,8 @@ body {
     border: 3px solid $Card;
   }
 }
+
+
 
 h1 {
   font-size: 1.8em;
@@ -45,3 +47,5 @@ h6 {
 hr {
   margin: 0em 0em 0.5em 0em !important;
 }
+
+
