--- a/src/assets/templates/.eternal/css/style.scss
+++ b/src/assets/templates/.eternal/css/style.scss
@@ -1,19 +1,26 @@
-// Variables  
+// Variables 
 $fontFamily: 'Helvetica';
 $FontColor1: #3a3a3a;
 $FontColor2: whitesmoke;
+$FontColor3: #666;
 $FontShadow: #212121;
 $Color1: #0d6efd;
 $Color2: #6cfb92;
 $Color1Dark: #0e59ca;
 $BG: #E7E7E2;
-$Card: #FFFFFF;
 $BG2: #F7F7F7;
+$BG3: #d1d1cd;
+$Card: #FFFFFF;
 $ToolTipBG: #eb4034;
 $ToolTipColor: #ffffff;
 $BorderColor: #ced4da;
 
-// Imports
+
+$notifySuccess: #21be4b;
+$notifyError: #eb4034;
+
+// Imports       
+@import './bootstrap.min';
 @import './navbar';
 @import './spoiler';
 @import './default';
@@ -24,8 +31,9 @@ $BorderColor: #ced4da;
 @import './utility';
 @import './easymde.min';
 
-// CSS
-@mixin center {
+
+// CSS   
+@mixin center {    
   display: grid;
   place-items: center;
 }
@@ -37,9 +45,9 @@ $BorderColor: #ced4da;
 }
 
 @mixin innerBorder($size, $color) {
-  -webkit-box-shadow: inset 0px 0px 0px $size $color;
-  -moz-box-shadow: inset 0px 0px 0px $size $color;
-  box-shadow: inset 0px 0px 0px $size $color;
+  -webkit-box-shadow: inset 0px 0px 0px $size $color !important;
+  -moz-box-shadow: inset 0px 0px 0px $size $color !important;
+  box-shadow: inset 0px 0px 0px $size $color !important;
 }
 
 #page-title {
@@ -47,7 +55,19 @@ $BorderColor: #ced4da;
     font-size: 2.5em;
     font-weight: 400;
   }
-}
+  #page-breadcrumbs {
+    background-color: $BG2;
+    color: $FontColor3;
+    border-radius: 0.3em;
+    margin-bottom: 0.8em;
+    padding: 0.5em 1em;
+    font-size: smaller;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+  }
+} 
 
 #head-card {
   @include center();
@@ -56,7 +76,7 @@ $BorderColor: #ced4da;
     color: $FontColor1;
     text-shadow: 1px 1px 2px $FontShadow;
   }
-  // Website Title
+  // Website Title  
   #project-title {
     text-align: center;
     font-size: 3.4em;
@@ -80,6 +100,14 @@ body {
     border-radius: 0.5em;
     padding: 2em 3em;
   }
+
+  #page-tags {
+    border-top: 1px solid $BG;
+  }
+}
+
+.page-tab {
+  display: none;
 }
 
 @media (max-width: 1200px) {
