--- a/src/assets/templates/story/story-a.html
+++ b/src/assets/templates/story/story-a.html
@@ -2,23 +2,16 @@
 <script>
   window.pageData = {
     title: "Ethan Morales",
+    parent: "Birth of a Hero",
+    tags: "",
     description: "Stuff stuff",
     functions: {
       createSpoilers: true,
       createProfileBox: true,      
-      createTabs: [
-        {
-          contentArea: "spoiler",
-          tabs: [
-            {name: "Overview", id: "spoiler-overview"}, 
-            {name: "Relationship", id: "spoiler-relationships"}
-          ]
-        },
-      ]
     },
     fileStructure: {
       nonspoiler: {
-        "non-spoiler-overview": "default"
+        "nonspoiler-overview": "Default",
       },
       spoiler: {
         "spoiler-overview": "Overview",
@@ -28,7 +21,7 @@
   }
 
   window.profileData = {
-    'non-spoiler-overview': {
+    'nonspoiler-overview': {
       'Title': 'Ethan Morales',
       'Image': {
         "Original Art": "assets/images/Ethan-Morales.png",
@@ -139,8 +132,9 @@
 
 <!-- File Content -->
 
-<div id="non-spoiler">
-  <div id="non-spoiler-overview" class="page-tab">
+<div id="nonspoiler">
+
+  <div id="nonspoiler-overview" class="page-tab">
     Ethan Morales is the Main Protagonist of the novel "The Birth of a Hero" and the **the central** point of the story. He is a student studying in U.H.A. and is part of E-Class. He has the power to create physical objects using his body fats which he apparently "Awakened" randomly in the past.
     
     [[toc]]
@@ -152,6 +146,7 @@
 
     When not in school, he always wears a dark, baggy sweater and a pair of dark pants. When he goes outside, he wears a dark track suit with orange-red stripes.
 
+
     # Personality
     Ethan first appeared to have a stoic and quiet personality.
     However, his true personality eventually appears, revealing a chaotic and mischievous person. He does not like rules and laws, preferring to do as he pleases. Although he do respect the law, up until its convenient to him, that is.
@@ -159,9 +154,11 @@
     Ethan's perspective on what is 'Right' is very skewed from the norm, preferring to achieve pragmatic results regardless of the means. Sometimes, things that are really dangerous and blatantly wrong to the average person is seen by Ethan as something 'obvious'. This caused his friends and classmates to view him as an unhinged sociopath.
     However, this kind of Morality is not unique to Ethan as Kevin sometimes displays them, albeit to a lesser degree, clearly influenced by the two of them grewing up pratically together.
 
+
     # Ability
     ## Candlefire
     The ability to create a small candle fire in his palm
+
 
     ## Creation 
     The ability to turn body fats into a any physical objects. The following is the current limits.
