--- a/src/assets/templates/story/story-a.html
+++ b/src/assets/templates/story/story-a.html
@@ -17,7 +17,8 @@
         "spoiler-overview": "Overview",
         "spoiler-relationships": "Relationships"
       }
-    }
+    },
+    disabledProfileData: [],
   }
 
   window.profileData = {
@@ -89,7 +90,7 @@
           'Blood Type': 'AB'
         },
         'Power': {
-          'Rank': 'Sixth Awakener',
+          // 'Rank': 4,
           'Ability': [
             'Candlefire',
             'Pyrokinesis',
