--- a/src/assets/templates/index.html
+++ b/src/assets/templates/index.html
@@ -10,10 +10,13 @@
   <link href="./.eternal/css/style.css" rel="stylesheet">
 
   <!-- JS -->
-  <script src="./.eternal/js/bootstrap.bundle.min.js"></script>
-  <script src="./.eternal/js/easymde.min.js"></script>
-  <script src="./.eternal/js/notifications.js"></script>
-  <script src="./.eternal/js/main.js"></script>
+  <script src="./.eternal/js/bootstrap.bundle.min.js" type="text/javascript" ></script>
+  <script src="./.eternal/js/easymde.min.js" type="text/javascript"></script>
+  <script src="./.eternal/js/notifications.min.js" type="text/javascript"></script>
+  <script src="./.eternal/js/jsoneditor.js" type="text/javascript"></script>
+  <script src="./.eternal/js/main.js" type="text/javascript"></script>
+
+
 
   <!-- Head Bar -->
   <div id="head-card"></div>
@@ -77,6 +80,10 @@
       console.log(selected);
     }
   </script>
+
+<script>
+
+</script>
 
 </body>
 
