--- a/src/assets/templates/content/story/ethan-morales.html
+++ b/src/assets/templates/content/story/ethan-morales.html
@@ -2,13 +2,10 @@
 <script>
   window.pageData = {
     title: "Ethan Morales",
-    parent: "Birth of a Hero",
+    parent: "tboah-characters",
     tags: "",
     description: "Stuff stuff",
-    functions: {
-      createSpoilers: true,
-      createProfileBox: true,      
-    },
+    createSpoilers: true,
     fileStructure: {
       nonspoiler: {
         "nonspoiler-overview": "Default",
@@ -23,12 +20,12 @@
 
   window.profileData = {
     'nonspoiler-overview': {
-      'Title': 'Ethan Morales',
-      'Image': {
+      Title: 'Ethan Morales',
+      Image: {
         "Original Art": "assets/images/Ethan-Morales.png",
         "Uniform": "assets/images/Eltia-Axolin-Uniform.png",
       },
-      'Content': {
+      Content: {
         'Desc': {
           'Full Name': 'Ethan R. Morales',
           'Alias': ['Tantan', 'Lunatic', 'Crazy Sociopath']
@@ -67,13 +64,13 @@
 
     },
     'spoiler-overview': {
-      'Title': 'Ethan Morales',
-      'Image': {
+      Title: 'Ethan Morales',
+      Image: {
         "Original Art": "assets/images/Ethan-Morales.png",
         "Uniform": "assets/images/Eltia-Axolin-Uniform.png",
         "Hero Suit": "assets/images/Eltia Axolin.png"
       },
-      'Content': {
+      Content: {
         'Desc': {
           'Full Name': 'Ethan R. Morales',
           'Alias': ['Tantan', 'Lunatic', 'Crazy Sociopath', 'The Unchained Predator']
@@ -136,7 +133,7 @@
 <div id="nonspoiler">
 
   <div id="nonspoiler-overview" class="page-tab">
-    Ethan Morales is the Main Protagonist of the novel "The Birth of a Hero" and the **the central** point of the story. He is a student studying in U.H.A. and is part of E-Class. He has the power to create physical objects using his body fats which he apparently "Awakened" randomly in the past.
+    Ethan Morales __is__ the Main __**Protagonist**__ of the novel __"The Birth of a Hero"__ and the **the central** point of the story. He is a student studying in U.H.A. and is part of E-Class. He has the power to create physical objects using his body fats which he apparently "Awakened" randomly in the past.
     
     [[toc]]
 
