--- a/src/assets/templates/.eternal/css/_editor.scss
+++ b/src/assets/templates/.eternal/css/_editor.scss
@@ -33,7 +33,6 @@
   transition: visibility 0s, opacity 0.3s linear;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
-
   .modal-card {
     background-color: $Card;
     margin: 5em auto;
@@ -132,7 +131,11 @@
   }
 }
 
+
 #editorProfileBox {
+  #jsoneditor {
+    height: 100% !important;
+  }
   #editorProfileBoxMenu {
     padding: 0em 0.95em;
   }
@@ -148,7 +151,6 @@
 #editorManageTabs {
   min-height: 10em;
   height: fit-content;
-
   select {
     max-width: 100%;
     margin-bottom: 0.5em;
@@ -157,7 +159,6 @@
     width: 100% !important;
     position: relative;
     display: inline-flex;
-    
     button {
       width: 100%;
       font-size: small;
@@ -168,7 +169,7 @@
   }
   #editorManageTabsLeft {
     max-width: 20em;
-    optgroup  {
+    optgroup {
       font-weight: bold;
       color: $FontColor1;
     }
@@ -177,12 +178,55 @@
       color: $FontColor1;
       font-weight: normal;
     }
-
   }
   .side-line {
     width: 100%;
   }
   #managetab-contentarea-list {
     font-weight: 200 !important;
+  }
+}
+
+// Sidebar
+.editor-sidebar {
+  background-color: $Color1;
+  color: $FontColor2;
+  position: fixed;
+  float: left !important;
+  width: 20.8em !important;
+  border-radius: 0.5em;
+  border-top-left-radius: 0em;
+  border-bottom-left-radius: 0em;
+  transition: all 0.35s ease-in;
+  h1 {
+    margin: 0.2em 0.2em;
+    margin-top: 0.5em;
+  }
+  button {
+    margin-top: 0.3em;
+  }
+  z-index: 99999;
+  top: 0;
+  left: 0;
+  height: 100%;
+  #directory-area {
+    width: 100%;
+    height: max-content;
+    margin: 0.5em 0em;
+    border-radius: 0.5em;
+    background-color: $Card;
+  }
+}
+
+
+#page-editor-sidebar-btns {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  margin: 3em !important;
+  z-index: 44;
+  button {
+    width: 2.5em;
+    margin-bottom: 0.5em;
   }
 }
