--- a/src/assets/templates/.eternal/css/_utility.scss
+++ b/src/assets/templates/.eternal/css/_utility.scss
@@ -6,7 +6,7 @@
 
 
 .hide {
-  display: none;
+  display: none !important;
 }
 
 .space {
@@ -49,6 +49,14 @@
   &:hover {
     background-color: $BG3;
   }
+}
+
+.btn-small {
+  font-size: small !important;
+}
+
+.btn-w5 {
+  width: 7.5em !important;
 }
 
 .no-border {
@@ -123,4 +131,16 @@
 
 .mb-1 {
   margin: 0em 0.3em !important;
+}
+
+.link {
+  color: $Color1;
+  background-color: $FontColor2;
+  text-decoration: none;
+  padding: 0.2em;
+  border-radius: 0.2em;
+  &:hover {
+    background-color: $Color1;
+    color: $FontColor2;
+  }
 }
