--- a/src/assets/templates/.eternal/css/style.css
+++ b/src/assets/templates/.eternal/css/style.css
@@ -12243,6 +12243,10 @@ hr {
   border-radius: 0.3em !important;
 }
 
+#editorProfileBox #jsoneditor {
+  height: 100% !important;
+}
+
 #editorProfileBox #editorProfileBoxMenu {
   padding: 0em 0.95em;
 }
@@ -12307,6 +12311,55 @@ hr {
 
 #editorManageTabs #managetab-contentarea-list {
   font-weight: 200 !important;
+}
+
+.editor-sidebar {
+  background-color: #0d6efd;
+  color: whitesmoke;
+  position: fixed;
+  float: left !important;
+  width: 20.8em !important;
+  border-radius: 0.5em;
+  border-top-left-radius: 0em;
+  border-bottom-left-radius: 0em;
+  -webkit-transition: all 0.35s ease-in;
+  transition: all 0.35s ease-in;
+  z-index: 99999;
+  top: 0;
+  left: 0;
+  height: 100%;
+}
+
+.editor-sidebar h1 {
+  margin: 0.2em 0.2em;
+  margin-top: 0.5em;
+}
+
+.editor-sidebar button {
+  margin-top: 0.3em;
+}
+
+.editor-sidebar #directory-area {
+  width: 100%;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  margin: 0.5em 0em;
+  border-radius: 0.5em;
+  background-color: #FFFFFF;
+}
+
+#page-editor-sidebar-btns {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  margin: 3em !important;
+  z-index: 44;
+}
+
+#page-editor-sidebar-btns button {
+  width: 2.5em;
+  margin-bottom: 0.5em;
 }
 
 .ncf-container {
@@ -12445,7 +12498,7 @@ hr {
 }
 
 .hide {
-  display: none;
+  display: none !important;
 }
 
 .space {
@@ -12490,6 +12543,14 @@ hr {
 
 .btn-two:hover {
   background-color: #d1d1cd;
+}
+
+.btn-small {
+  font-size: small !important;
+}
+
+.btn-w5 {
+  width: 7.5em !important;
 }
 
 .no-border {
@@ -12564,6 +12625,19 @@ hr {
 
 .mb-1 {
   margin: 0em 0.3em !important;
+}
+
+.link {
+  color: #0d6efd;
+  background-color: whitesmoke;
+  text-decoration: none;
+  padding: 0.2em;
+  border-radius: 0.2em;
+}
+
+.link:hover {
+  background-color: #0d6efd;
+  color: whitesmoke;
 }
 
 /**
@@ -15482,6 +15556,198 @@ div.jsoneditor-statusbar > .jsoneditor-size-info {
   opacity: 1;
 }
 
+#loading-screen {
+  display: block;
+  position: absolute;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+  margin: 0;
+  background: #0d6efd;
+  width: 100%;
+  z-index: 999;
+  top: 0;
+  left: 0;
+}
+
+.loading-div {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  height: 2rem;
+  width: 2rem;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+          transform: translateX(-50%) translateY(-50%);
+}
+
+.loading-block {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 2rem;
+  width: 2rem;
+}
+
+.loading-block .loading-item {
+  position: absolute;
+  height: 2rem;
+  width: 2rem;
+  background: #fff;
+  -webkit-animation: move 2s linear infinite;
+          animation: move 2s linear infinite;
+}
+
+.loading-block .loading-item:nth-of-type(1) {
+  top: -2rem;
+  left: -2rem;
+  -webkit-animation-delay: -1.75s;
+          animation-delay: -1.75s;
+}
+
+.loading-block .loading-item:nth-of-type(2) {
+  top: -2rem;
+  left: 0;
+  -webkit-animation-delay: -1.5s;
+          animation-delay: -1.5s;
+}
+
+.loading-block .loading-item:nth-of-type(3) {
+  top: -2rem;
+  left: 2rem;
+  -webkit-animation-delay: -1.25s;
+          animation-delay: -1.25s;
+}
+
+.loading-block .loading-item:nth-of-type(4) {
+  top: 0;
+  left: 2rem;
+  -webkit-animation-delay: -1s;
+          animation-delay: -1s;
+}
+
+.loading-block .loading-item:nth-of-type(5) {
+  top: 2rem;
+  left: 2rem;
+  -webkit-animation-delay: -0.75s;
+          animation-delay: -0.75s;
+}
+
+.loading-block .loading-item:nth-of-type(6) {
+  top: 2rem;
+  left: 0;
+  -webkit-animation-delay: -0.5s;
+          animation-delay: -0.5s;
+}
+
+.loading-block .loading-item:nth-of-type(7) {
+  top: 2rem;
+  left: -2rem;
+  -webkit-animation-delay: -0.25s;
+          animation-delay: -0.25s;
+}
+
+.loading-block .loading-item:nth-of-type(8) {
+  top: 0;
+  left: -2rem;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+}
+
+@-webkit-keyframes move {
+  0% {
+    -webkit-transform: rotate(0) scale(1);
+            transform: rotate(0) scale(1);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  10% {
+    -webkit-transform: rotate(90deg) scale(0);
+            transform: rotate(90deg) scale(0);
+  }
+  50% {
+    -webkit-transform: rotate(90deg) scale(0);
+            transform: rotate(90deg) scale(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  60% {
+    -webkit-transform: rotate(180deg) scale(1);
+            transform: rotate(180deg) scale(1);
+  }
+  100% {
+    -webkit-transform: rotate(180deg) scale(1);
+            transform: rotate(180deg) scale(1);
+  }
+}
+
+@keyframes move {
+  0% {
+    -webkit-transform: rotate(0) scale(1);
+            transform: rotate(0) scale(1);
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in;
+  }
+  10% {
+    -webkit-transform: rotate(90deg) scale(0);
+            transform: rotate(90deg) scale(0);
+  }
+  50% {
+    -webkit-transform: rotate(90deg) scale(0);
+            transform: rotate(90deg) scale(0);
+    -webkit-animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+  }
+  60% {
+    -webkit-transform: rotate(180deg) scale(1);
+            transform: rotate(180deg) scale(1);
+  }
+  100% {
+    -webkit-transform: rotate(180deg) scale(1);
+            transform: rotate(180deg) scale(1);
+  }
+}
+
+.collapsible {
+  background-color: #0d6efd;
+  color: white;
+  cursor: pointer;
+  padding: 0.5em 1em;
+  /* width: 100%; */
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: small;
+}
+
+.collapsible-active,
+.collapsible:hover {
+  background-color: #0d6efd;
+}
+
+.collapsible:after {
+  content: '\002B';
+  color: white;
+  font-weight: bold;
+  margin-left: 5px;
+}
+
+.collapsible-active:after {
+  content: "\2212";
+}
+
+.collapsible-content {
+  padding: 0 18px;
+  max-height: 0;
+  overflow: hidden;
+  -webkit-transition: max-height 0.2s ease-out;
+  transition: max-height 0.2s ease-out;
+  background-color: #F7F7F7;
+}
+
 #page-title h1 {
   font-size: 2.5em;
   font-weight: 400;
@@ -15530,9 +15796,6 @@ div.jsoneditor-statusbar > .jsoneditor-size-info {
 }
 
 body {
-  display: -ms-grid;
-  display: grid;
-  place-items: center;
   background-color: #E7E7E2;
   color: #3a3a3a;
   font-family: "Helvetica";
@@ -15546,6 +15809,7 @@ body .body-card {
   color: #3a3a3a;
   border-radius: 0.5em;
   padding: 2em 3em;
+  overflow: auto !important;
 }
 
 body #page-tags {
