--- a/src/assets/templates/index.html
+++ b/src/assets/templates/index.html
@@ -10,11 +10,12 @@
   <link href="./.eternal/css/style.css" rel="stylesheet">
 
   <!-- JS -->
-  <script src="./.eternal/js/bootstrap.bundle.min.js" type="text/javascript" ></script>
+  <script src="./.eternal/js/bootstrap.bundle.min.js" type="text/javascript"></script>
   <script src="./.eternal/js/easymde.min.js" type="text/javascript"></script>
   <script src="./.eternal/js/notifications.min.js" type="text/javascript"></script>
   <script src="./.eternal/js/jsoneditor.js" type="text/javascript"></script>
   <script src="./.eternal/js/main.js" type="text/javascript"></script>
+  
 
 
 
@@ -22,16 +23,37 @@
   <div id="head-card"></div>
 </head>
 
-<body>
-  <button id="modalbtn" onclick="createEditor()">open modal</button>
-  <div id="page-editor"> </div>
+<!-- <div id="loading-screen">
+  <div class='loading-div'>
+    <div class='loading-block'>
+      <div class='loading-item'></div>
+      <div class='loading-item'></div>
+      <div class='loading-item'></div>
+      <div class='loading-item'></div>
+      <div class='loading-item'></div>
+      <div class='loading-item'></div>
+      <div class='loading-item'></div>
+      <div class='loading-item'></div>
+    </div>
+  </div>
+</div> -->
 
+<div id="editor-area">
+  <div id="page-editor-sidebar" class="hide"></div>
+  <div id="page-editor-sidebar-btns"></div>
+<div id="page-editor"> </div>
+</div>
+
+
+
+
+<body class="hide">
   <div class="container body-card">
     <div id="spoiler-button"></div>
 
     <div id="page-title">
       <h1></h1>
-      <div id="page-breadcrumbs"></div>
+      <div id="page-breadcrumbs" class="hide"></div>
     </div>
 
     <div id="page-content"><a href="?p=story-a">Test go</a></div>
@@ -63,27 +85,21 @@
         directory = data;
       })
       .then(() => {
+
         // Gets Input Url
+        toggleScrollbarVisibility();
         if (window.location.search != "") {
           renderPage();
+        } else {
+          renderPage(true);
         }
       })
+      .then(() => {
+        document.getElementsByTagName('body')[0].classList.remove('hide');
+        toggleScrollbarVisibility();
+      })
 
-    function createEditor() {
-      openModal('editor-modal')
-    }
   </script>
-
-  <script>
-    function myNewFunction(sel) {
-      let selected = sel.value;
-      console.log(selected);
-    }
-  </script>
-
-<script>
-
-</script>
 
 </body>
 
