fixed breadcrumbs recursive infinite loop on nonexistent parent name

--- a/src/assets/templates/content/home.html
+++ b/src/assets/templates/content/home.html
@@ -2,7 +2,7 @@
 <script>
   window.pageData = {
     title: "Home",
-    parent: "Birth of a Hero",
+    parent: "adsds",
     tags: "",
     description: "Stuff stuff",
     createSpoilers: false,
