day 8: setup electron integration and connection to send data when save changes is clicked

--- a/src/assets/templates/.eternal/css/_utility.scss
+++ b/src/assets/templates/.eternal/css/_utility.scss
@@ -134,7 +134,7 @@
 }
 
 .link {
-  color: $Color1;
+  color: $FontColor1;
   background-color: $FontColor2;
   text-decoration: none;
   padding: 0.2em;
