--- a/src/assets/templates/content/home.html
+++ b/src/assets/templates/content/home.html
@@ -23,6 +23,7 @@
 <div id="nonspoiler">
   <div id="nonspoiler-overview" class="page-tab">
     Welcome to the Song of Enderion Official Wiki!
+    <a href="?p=ethan-morales">click me</a>
   </div>
 </div>
 
