--- a/src/assets/templates/.eternal/css/style.css
+++ b/src/assets/templates/.eternal/css/style.css
@@ -12628,7 +12628,7 @@ hr {
 }
 
 .link {
-  color: #0d6efd;
+  color: #3a3a3a;
   background-color: whitesmoke;
   text-decoration: none;
   padding: 0.2em;
