--- a/src/assets/templates/index.html
+++ b/src/assets/templates/index.html
@@ -15,12 +15,13 @@
   <script src="./.eternal/js/notifications.min.js" type="text/javascript"></script>
   <script src="./.eternal/js/jsoneditor.js" type="text/javascript"></script>
   <script src="./.eternal/js/main.js" type="text/javascript"></script>
-  
+
 
 
 
   <!-- Head Bar -->
   <div id="head-card"></div>
+
 </head>
 
 <!-- <div id="loading-screen">
@@ -41,11 +42,8 @@
 <div id="editor-area">
   <div id="page-editor-sidebar" class="hide"></div>
   <div id="page-editor-sidebar-btns"></div>
-<div id="page-editor"> </div>
+  <div id="page-editor"> </div>
 </div>
-
-
-
 
 <body class="hide">
   <div class="container body-card">
@@ -56,7 +54,7 @@
       <div id="page-breadcrumbs" class="hide"></div>
     </div>
 
-    <div id="page-content"><a href="?p=story-a">Test go</a></div>
+    <div id="page-content"><button onclick="goTo('Ethan-Morales')">Test go</button></div>
 
     <div id="page-tags"></div>
   </div>
@@ -65,17 +63,17 @@
     // Add Site Head
     getAsset('headbar.html')
       .then(data => {
-        document.getElementById('head-card').innerHTML = data
+        document.getElementById('head-card').innerHTML = data;
 
         getAsset('eternal.json') // Website Title
           .then(data => {
-            document.getElementById('project-title').innerText = data['projectTitle']
+            document.getElementById('project-title').innerText = data['projectTitle'];
           })
 
         // Add Horizontal Navigation Bar
         getAsset('navbar.html')
           .then(data => {
-            document.getElementById('nav-card').innerHTML = data
+            document.getElementById('nav-card').innerHTML = data;
           })
       })
 
@@ -85,16 +83,10 @@
         directory = data;
       })
       .then(() => {
-
         // Gets Input Url
         toggleScrollbarVisibility();
         renderPage();
       })
-      .then(() => {
-        document.getElementsByTagName('body')[0].classList.remove('hide');
-        toggleScrollbarVisibility();
-      })
-
   </script>
 
 </body>
