prototype working save state of files

--- a/src/assets/templates/content/home.html
+++ b/src/assets/templates/content/home.html
@@ -1,18 +1,18 @@
 <!-- File Data -->
 <script>
   window.pageData = {
-    title: "Home",
-    parent: "adsds",
-    tags: "",
-    description: "Stuff stuff",
-    createSpoilers: false,
-    fileStructure: {
-      nonspoiler: {
-        "nonspoiler-overview": "Default",
+    "title": "Home",
+    "parent": "adsds",
+    "tags": "",
+    "description": "Stuff stuff",
+    "createSpoilers": false,
+    "fileStructure": {
+      "nonspoiler": {
+        "nonspoiler-overview": "Default"
       },
-      spoiler: {}
+      "spoiler": {}
     },
-    disabledProfileData: [],
+    "disabledProfileData": []
   }
 
   window.profileData = {}
@@ -20,13 +20,13 @@
 
 <!-- File Content -->
 
+<div id="spoiler"></div>
 <div id="nonspoiler">
   <div id="nonspoiler-overview" class="page-tab">
     Welcome to the Song of Enderion Official Wiki!
+    <a href="?p=ethan-morales">click me</a>Welcome to the Song of Enderion Official Wiki!
+    <a href="?p=ethan-morales">click me</a>Welcome to the Song of Enderion Official Wiki!
+    <a href="?p=ethan-morales">click me</a>Welcome to the Song of Enderion Official Wiki!
     <a href="?p=ethan-morales">click me</a>
   </div>
-</div>
-
-<div id="spoiler">
-
 </div>
